// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobTitle can render a disable input 1`] = `
<label id="jobTitleField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="jobTitle"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Job title
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="jobTitle"
           name="jobTitle"
           placeholder="Enter your job title"
           data-trackable="job-title"
           aria-required="true"
           required
           disabled
           value
    >
    <span class="o-forms-input__error">
      Please enter your job title.
    </span>
  </span>
</label>
`;

exports[`JobTitle can render an error message 1`] = `
<label id="jobTitleField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="jobTitle"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Job title
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text o-forms-input--invalid">
    <input type="text"
           id="jobTitle"
           name="jobTitle"
           placeholder="Enter your job title"
           data-trackable="job-title"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please enter your job title.
    </span>
  </span>
</label>
`;

exports[`JobTitle can render an initial selected value 1`] = `
<label id="jobTitleField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="jobTitle"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Job title
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="jobTitle"
           name="jobTitle"
           placeholder="Enter your job title"
           data-trackable="job-title"
           aria-required="true"
           required
           value="Super hero"
    >
    <span class="o-forms-input__error">
      Please enter your job title.
    </span>
  </span>
</label>
`;

exports[`JobTitle render a select with a label 1`] = `
<label id="jobTitleField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="jobTitle"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Job title
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="jobTitle"
           name="jobTitle"
           placeholder="Enter your job title"
           data-trackable="job-title"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please enter your job title.
    </span>
  </span>
</label>
`;
